# medrob-lab3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  optional_ssh_setup.md  requirements.txt
python/: fancier_plot.py  mbot_move_simple.py  read_and_plot.py  realtime_plot.py  record_plot.py
src/: mbot_classic.c  mbot_comms.c  mbot_comms.h  mbot_controller.c  mbot_omni.c  mbot_omni.h  mbot_print.c
tests/: mbot_encoder_test.c  mbot_teleoperation.c
